Online-Judge-ArgoCD/mySQL.yaml
# Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: online-judge

---
# MySQL Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: some-mysql
  namespace: online-judge
spec:
  selector:
    matchLabels:
      app: some-mysql
  template:
    metadata:
      labels:
        app: some-mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8
          ports:
            - containerPort: 3306
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - mysqladmin ping -h 127.0.0.1 -uroot -p$(MYSQL_ROOT_PASSWORD)
            initialDelaySeconds: 10
            periodSeconds: 5
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: oj-mysql-pvc

---
# MySQL Service (internal)
apiVersion: v1
kind: Service
metadata:
  name: some-mysql
  namespace: online-judge
spec:
  selector:
    app: some-mysql
  ports:
    - port: 3306
      targetPort: 3306
  type: ClusterIP
